# lawllm

./: .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  pytest.ini  query.py  requirements.txt
scripts/: chunk_documents.py  example_chunking.py  example_indexing.py  example_scrape.py  example_summarize.py
src/: __init__.py  models.py
src/rag/: __init__.py  llm.py  processor.py  reranker.py  summarizer.py  vector_store.py
src/scraper/: __init__.py  client.py  config.py  extractors.py  normalizer.py  spider_registry.py  storage.py
src/tests/: __init__.py  conftest.py  test_models.py  test_scraper.py
src/tests/processor/: __init__.py  test_processor.py
src/tests/rag/: __init__.py  test_vector_store.py
